# py-rackbus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: EXAMPLE_TRANSACTIONS.md  PARAMETERS.md  PROTOCOL.md  REVERSE_ENGINEERING.md  STRUCTURE.md  TESTED_DEVICE.md
examples/: basic_usage.py
firmware/: .gitignore  README.md  platformio.ini
firmware/include/: secrets.h.example
firmware/src/: main.cpp  rackbus_client.h  rackbus_codec.h
hardware/: README.md
rackbus_client/: __init__.py  client.py  codec.py  crc.py  exceptions.py  parameters.py  transport.py
tests/: conftest.py  test_fixtures.json  test_protocol.py
